# easytrack

./: .gitattributes  .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  JOSS_SUBMISSION_CHECKLIST.md  LICENSE.md  README.md  benchmark_ctc.py  benchmark_log.txt  cell_config.json  example.py  launch.py  optim_backend.py  optim_launch.py  optim_manager.py  optim_tracking.py  optim_widget.py  presets.py  pyproject.toml  tox.ini  tracking.py  utils.py  widget.py
.github/workflows/: python-publish.yml  tests.yml
.napari-hub/: DESCRIPTION.md  config.yml
configs/: optimized_config_3d.json
docs/: conf.py  index.rst
docs/api/: index.rst  optim_backend.rst  optim_manager.rst  optim_pipeline.rst  presets.rst  tracking.rst  utils.rst
docs/napari_plugin/: index.rst
easytrack/: optim_widget.py  tracking.py  widget.py
example_data/: z_tracking_example.tif  z_tracking_not_cleaned.tif
example_data/2d_time/: 2d_time_gt.tif  2d_time_raw.tif
example_data/2d_time_example/: CorrSkel_CloseAfterT27_t0000.tif  CorrSkel_CloseAfterT27_t0001.tif  CorrSkel_CloseAfterT27_t0002.tif  CorrSkel_CloseAfterT27_t0003.tif  CorrSkel_CloseAfterT27_t0004.tif  CorrSkel_CloseAfterT27_t0005.tif  CorrSkel_CloseAfterT27_t0006.tif  CorrSkel_CloseAfterT27_t0007.tif  CorrSkel_CloseAfterT27_t0008.tif  CorrSkel_CloseAfterT27_t0009.tif  CorrSkel_CloseAfterT27_t0010.tif  CorrSkel_CloseAfterT27_t0011.tif  CorrSkel_CloseAfterT27_t0012.tif  CorrSkel_CloseAfterT27_t0013.tif  CorrSkel_CloseAfterT27_t0014.tif  CorrSkel_CloseAfterT27_t0015.tif  CorrSkel_CloseAfterT27_t0016.tif  CorrSkel_CloseAfterT27_t0017.tif  CorrSkel_CloseAfterT27_t0018.tif  CorrSkel_CloseAfterT27_t0019.tif  CorrSkel_CloseAfterT27_t0020.tif  CorrSkel_CloseAfterT27_t0021.tif  CorrSkel_CloseAfterT27_t0022.tif  CorrSkel_CloseAfterT27_t0023.tif  CorrSkel_CloseAfterT27_t0024.tif  CorrSkel_CloseAfterT27_t0025.tif  CorrSkel_CloseAfterT27_t0026.tif  Timings.xlsx
example_scripts/: benchmark_ctc.py  error_analysis.py  example.py  gt_filtering.py  optim_launch.py  plot_ctc_results.py  prepare_wing_disc.py
paper/: paper.bib  paper.md  paper.tex
src/easytrack/: __init__.py  example.py  main.py  napari.yaml  optim_manager.py  presets.py  utils.py
src/easytrack/analysis/: optim_pipeline.py  tracking.py  tracking_manager.py  tracking_monitor.py
src/easytrack/configs/: WD3.2_param_means.json  optimized_config_3d.json
src/easytrack/widgets/: optim_widget.py  widget.py
src/napari_easytrack/: __init__.py  example.py  geff_export.py  napari.yaml  optim_backend.py  optim_pipeline.py  presets.py  utils.py
src/napari_easytrack/analysis/: optim_backend.py  optim_manager.py  optim_pipeline.py  tracking.py
src/napari_easytrack/configs/: WD1.1_param_means.json  disc2_config.json
src/napari_easytrack/widgets/: optim_widget.py  widget.py
tests/: __init__.py  conftest.py  test_geff_export.py  test_optim_backend.py  test_optim_manager.py  test_optim_pipeline.py  test_optim_widget.py  test_presets.py  test_tracking.py  test_utils.py  test_widget.py
