[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "easytrack"
version = "0.1.0"
description = "Cell tracking with btrack presets and parameter optimization"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "biology",
    "cell",
    "tracking",
    "tissue",
]
authors = [
    {email = "tim.huygelen.20@ucl.ac.uk", name = "Tim Huygelen"},
    {email = "p.munuera@ucl.ac.uk", name = "Pablo Vicente Munuera"},
    {email = "y.mao@ucl.ac.uk", name = "Yanlan Mao"},
]
classifiers = [
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "napari",
    "magicgui",
    "qtpy",
    "btrack",
    "optuna",
]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "tox",
    "imagecodecs",
    "coverage"
]

[project.entry-points."napari.manifest"]
easytrack = "easytrack:napari.yaml"

[tool.setuptools]
packages = ["easytrack"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-report=html --cov-fail-under=60"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "example.py",
    "launch.py",
    "setup.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]