[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "easytrack"
version = "0.1.0"
description = "Cell tracking with btrack presets and parameter optimization"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "biology",
    "cell",
    "tracking",
    "tissue",
]
authors = [
    {email = "tim.huygelen.20@ucl.ac.uk", name = "Tim Huygelen"},
    {email = "p.munuera@ucl.ac.uk", name = "Pablo Vicente Munuera"},
    {email = "y.mao@ucl.ac.uk", name = "Yanlan Mao"},
]
classifiers = [
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "magicgui",
    "napari",
    "numpy",
    "btrack",
    "qtpy",
    "scipy",
    "scikit-image",
    "napari",
    "magicgui",
    "qtpy",
    "btrack",
    "optuna",
]

dynamic = [
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pre-commit",
    "pyqt5",
    "ruff",
    "tox",
]
docs = [
    "myst-parser",
    "pydata-sphinx-theme",
    "pytz",
    "sphinx-autobuild",
    "sphinx",
    "sphinx_autodoc_typehints",
    "sphinxcontrib-video",
    "types-pytz",
]
testing = [
    "pytest",
    "pytest-cov",
    "tox",
    "imagecodecs",
    "coverage"
]

[project.entry-points."napari.manifest"]
easytrack = "easytrack:napari.yaml"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["easytrack"]

[tool.pytest.ini_options]
addopts = "--color=yes -v"
testpaths = [
    "tests",
]

[tool.coverage]
report = {skip_covered = true, sort = "cover", exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]}
run = {branch = true, parallel = true, source = [
    "easytrack",
]}
paths.source = [
    "src",
    ".tox*/*/lib/python*/site-packages",
    ".tox*\\*\\Lib\\site-packages",
]
