[build-system]
requires = ["setuptools >= 77.0.3", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-easytrack"
version = "0.1.3"
description = "Cell tracking with btrack presets and parameter optimization"
license.file = "LICENSE.md"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "biology",
    "cell",
    "tracking",
    "tissue",
]
authors = [
    {email = "tim.huygelen.20@ucl.ac.uk", name = "Tim Huygelen"},
    {email = "p.munuera@ucl.ac.uk", name = "Pablo Vicente Munuera"},
    {email = "y.mao@ucl.ac.uk", name = "Yanlan Mao"},
]
classifiers = [
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "magicgui",
    "napari",
    "numpy",
    "btrack",
    "qtpy",
    "scipy",
    "scikit-image",
    "magicgui",
    "optuna",
    "joblib",
    "traccuracy",
    "numba==0.62.1"
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pre-commit",
    "pyqt5",
    "ruff",
    "tox",
]
docs = [
    "myst-parser",
    "pydata-sphinx-theme",
    "pytz",
    "sphinx-autobuild",
    "sphinx",
    "sphinx_autodoc_typehints",
    "sphinxcontrib-video",
    "types-pytz",
    "sphinx-rtd-theme",
    "pyqt5"
]
testing = [
    "pytest",
    "pytest-cov",
    "tox",
    "imagecodecs",
    "coverage"
]

[project.entry-points."napari.manifest"]
napari-easytrack = "napari_easytrack:napari.yaml"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.package-data]
napari_easytrack = ["configs/*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--color=yes -v"
testpaths = [
    "tests",
]

[tool.coverage]
report = {skip_covered = true, sort = "cover", exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]}
run = {branch = true, parallel = true, source = [
    "napari_easytrack",
]}
paths.source = [
    "src",
    ".tox*/*/lib/python*/site-packages",
    ".tox*\\*\\Lib\\site-packages",
]
